[gd_scene load_steps=3 format=3 uid="uid://4xm567g2cjnt"]

[ext_resource type="Script" path="res://scripts/log_console_controller.gd" id="1_d717i"]
[ext_resource type="Theme" uid="uid://bi5sl1kglohpl" path="res://assets/themes/light_blue_theme.tres" id="2_0g5ns"]

[node name="LogConsole" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d717i")

[node name="BackgroundPanel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_0g5ns")

[node name="TitleLabel" type="Label" parent="BackgroundPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.1
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Logs:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="BackgroundPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.1
anchor_right = 0.975
anchor_bottom = 0.9

[node name="LogContainer" type="VBoxContainer" parent="BackgroundPanel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 30

[node name="LogTemplate" type="Label" parent="BackgroundPanel/ScrollContainer/LogContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "[00:00:00] Write log message here..."
autowrap_mode = 3

[node name="CloseButton" type="Button" parent="BackgroundPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.925
anchor_right = 0.75
anchor_bottom = 0.975
text = "Close"
